<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.android.quizapphealthyknowledge.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="80" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="@string/question"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="4"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:gravity="center"
                        android:text="@string/maxRound"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="22dp"
                    android:text="@string/question4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <RadioGroup
                    android:id="@+id/rg3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb40"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer41"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/rb41"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer42"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/rb42"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer43"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/rb43"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer44"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <RadioButton
                        android:id="@+id/rb44"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer45"
                        android:textAppearance="?android:textAppearanceMedium" />

                </RadioGroup>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/getStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:onClick="startQuiz"
        android:padding="22dp"
        android:text="@string/next" />
</>