<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.example.android.quizapphealthyknowledge.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/hearts"
        android:padding="16dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youlost"
        android:textColor="#FFFFFF"
        android:padding="22dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <Button
        android:id="@+id/tryagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:onClick="startQuiz"
        android:padding="22dp"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        android:text="@string/tryagain" />


</LinearLayout>
